--- a/hausaufgabe13.Rmd
+++ b/hausaufgabe13.Rmd
@@ -2,7 +2,7 @@
 % Isabele Franz <franzis@students.uni-marburg.de>
 % 2014-05-30
 
-Falls die Umlaute in dieser und anderen Dateien nicht korrekt dargestellt werden, sollten Sie File > Reopen with Encoding > UTF-8 sofort machen (und auf jeden Fall ohne davor zu speichern), damit die Enkodierung korrekt erkannt wird! 
+Falls die Umlaute in deser und anderen Dateien nicht korrekt dargestellt werden, sollten Sie File > Reopen with Encoding > UTF-8 sofort machen (und auf jeden Fall ohne davor zu speichern), damit die Enkodierung korrekt erkannt wird! 
 
 ```{r, echo=FALSE}
 # Notwendige Pakete laden
