--- a/SteinesM/hausaufgabe16.Rmd
+++ b/SteinesM/hausaufgabe16.Rmd
@@ -52,37 +52,6 @@ Sie können sich auch [das *ggplot* Buch](http://dx.doi.org/10.1007/978-0-387-98
 **Originelle Fragestellungen und Auswertungen werden mit Bonuspunkten belohnt!** 
 
 
-### Aufgabenstellung:
-Was bestimmt den Preis eines Diamanten?
-
-#### Plots
-Um einen ersten Eindruck der Daten zu erhalten, sollte man diese plotten. Die Haupthypothese könnte folgende sein: je mehr Karat ein Diamant besitzt, desto teurer ist er. Aber vielleicht beieinflussen auch Farbe, Schliff und Reinheit den Preis.
-
-```{r}
-ggplot(diamonds,aes(x=carat,y=price)) + geom_point()
-ggplot(diamonds,aes(x=carat,y=price,color=color)) + geom_point(alpha=0.5)
-ggplot(diamonds,aes(x=carat,y=price,color=cut)) + geom_point(alpha=0.5)
-ggplot(diamonds,aes(x=carat,y=price,color=clarity)) + geom_point(alpha=0.5)
-```
-Versuchen wir mal, die Beziehung von Karat und Preis durch eine lineare Regression darzustellen:
-
-```{r}
-ggplot(diamonds,aes(x=carat,y=price)) + geom_point() + geom_smooth(method="lm")
-
-```
-Vielleicht besser mit logarithmischen Skalen?
-
-```{r}
-ggplot(diamonds,aes(x=carat,y=price)) + geom_point() + geom_smooth(method="lm") + scale_x_log10() + scale_y_log10()
-
-```
-Ob Karat ein guter Prädiktor für den Preis eines Diamanten ist, können wir mit linearer Regression auch statistisch testen:
-
-```{r}
-summary(lm(price~carat, diamonds))
-
-```
-Die Abhängigkeit von Preis und Karat wird als signifikant angegeben, mit einem R^2 von 84.93%.
 
 
 Hier ein paar Grafiken (auch im Buch zu finden):
@@ -94,6 +63,59 @@ ggplot(diamonds,aes(x=carat,y=price,color=color)) + geom_point() + facet_wrap(~c
 
 # Noch eine Überlegung
 Haben Sie dabei explorativ oder konfirmativ gearbeitet? Was hat das für eine Auswirkung auf die Interpretation der Ergebnisse?
+
+
+
+### Aufgabenstellung:
+Was bestimmt den Preis eines Diamanten?
+
+#### Plots
+Um einen ersten Eindruck der Daten zu erhalten, sollte man diese plotten. Die Haupthypothese könnte folgende sein: je mehr Karat ein Diamant besitzt, desto teurer ist er. Aber vielleicht beeinflussen auch Farbe, Schliff und Reinheit den Preis.
+
+```{r}
+ggplot(diamonds,aes(x=carat,y=price)) + geom_point()
+ggplot(diamonds,aes(x=carat,y=price,color=color)) + geom_point(alpha=0.5)
+ggplot(diamonds,aes(x=carat,y=price,color=cut)) + geom_point(alpha=0.5)
+ggplot(diamonds,aes(x=carat,y=price,color=clarity)) + geom_point(alpha=0.5)
+```
+
+Versuchen wir mal, die Beziehung von Karat und Preis durch eine lineare Regression darzustellen:
+
+```{r}
+ggplot(diamonds,aes(x=carat,y=price)) + geom_point() + geom_smooth(method="lm")
+
+```
+
+Vielleicht besser mit logarithmischen Skalen?
+
+```{r}
+ggplot(diamonds,aes(x=carat,y=price)) + geom_point() + geom_smooth(method="lm") + scale_x_log10() + scale_y_log10()
+
+```
+
+#### Statistik
+
+Ob Karat ein guter Prädiktor für den Preis eines Diamanten ist, können wir mit linearer Regression auch statistisch testen:
+
+```{r}
+summary(lm(price ~ carat, diamonds))
+
+```
+Die Abhängigkeit von Preis und Karat wird als signifikant angegeben, mit einem R^2 von 84.93% für die Formel price = -2256.4 + carat * 7756.4
+Ein Teil der Varianz bleibt also noch unaufgeklärt. Sprich der Preis eines Diamanten hängt nicht *allein* von Karat ab. Da die Angaben zu Farbe, Schliff und Reinheit der Diamanten nicht intervallskaliert sind, kommen wir hier mit linearer Regression nicht weiter. Wir können allerdings schnell die Hypothese testen und bestätigen, dass der Karatwert eines Diamanten selbst, der aus dessen Gewicht hervorgeht, stark vom Volumen abhängt:
+
+```{r}
+summary(lm(carat ~ x + y + z, diamonds))
+
+```
+Um zu bestimmen, ob es einen preislichen Unterschied gibt zwischen verschiedenen Farben, Schliffen und Reinheitsgraden, greifen wir auf mehrfaktorielle ANOVA zurück
+(Achtung: Werte sind verzerrt aufgrund unterschiedlicher Gruppengrößen!):
+
+```{r}
+summary(aov(price ~ color*cut*clarity, data=diamonds))
+
+```
+Hier werden sowohl die Haupteffekte als auch die Interaktionen als signifikant angezeigt. Alle drei Eigenschaften der Diamanten scheinen sich also irgendwie auf den Preis auszuwirken.
 
 # Lizenz
 Dieses Werk ist lizenziert unter einer CC-BY-NC-SA Lizenz.
